--- a/HTML/_01_the_hostel.html
+++ b/HTML/_01_the_hostel.html
@@ -40,11 +40,12 @@
     </style>
 </head>
 <body>
+    <img src="../image/images/main/" alt="">
     <div id="overlay-top"></div>
     <div id="game-container">
-    <!-- 게임 요소들을 이곳에 추가합니다. -->
+    <!-- 게임 요소들-->
     </div>
     <div id="overlay-bottom"></div>
-    <!-- 추가적으로 필요한 스크립트 등을 불러오기 -->
+    <!-- 추가적으로 필요한 스크립트 -->
 </body>
 </html>
