--- a/HTML/_05_left_wall.html
+++ b/HTML/_05_left_wall.html
@@ -13,8 +13,8 @@
     <div id="overlay-top"></div>
     <div id="game-container">
         <img id="left-wall-image" src="../image/images/leftwall/왼쪽벽.PNG" alt="Left Wall" style="width: 100%; height: 100%;">
-        <button id="left-button" class="nav-button" onclick="location.href='_04_stage.html'">&lt;</button>
-        <button id="right-button" class="nav-button" onclick="location.href='_02_the_bar.html'">&gt;</button>
+        <button id="left-button" class="nav-button" onclick="location.href='_04_stage.html'"></button>
+        <button id="right-button" class="nav-button" onclick="location.href='_02_the_bar.html'"></button>
         <!-- 아이템 버튼 추가 -->
         <!-- <button type="button" class="btn btn-primary-item" id="button-item" data-bs-toggle="modal" data-bs-target="#intro">💼</button> -->
         <button type="button" class="btn btn-primary-item" id="button-item" onclick="goToInventory()">💼</button>
@@ -22,6 +22,7 @@
     <div id="overlay-bottom"></div>
     <div class="shadow-overlay"></div>
     <!-- 추가적으로 필요한 스크립트 등을 불러오기 -->
+    <!-- <script src="../js/2nd_left_wall.js"></script> -->
     <script src="../js/_05_left_wall.js"></script>
     <script src="../js/inventory.js"></script>
 
