--- a/HTML/inventory.html
+++ b/HTML/inventory.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inventory</title>
-    <!-- <link rel="icon" href="../favicon-16x16.png"> -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');
 
@@ -37,8 +36,8 @@
             align-items: center;
         }
         .item {
-            width: 50px;
-            height: 50px;
+            width: 70px;
+            height: 70px;
             position: absolute;
             display: flex;
             justify-content: center;
@@ -113,18 +112,16 @@
         <div class="intembox" id="box7" style="left: 85.7%; top: 11%;"></div>
     </div>
 
-    <!-- Modal -->
+    <!-- recipe Modal -->
     <div id="recipe-modal" class="modal">
         <span class="close">&times;</span>
         <img class="modal-content" id="modal-img">
     </div>
 
-    
     <!-- 인벤토리에서 돌아가는 버튼 -->
     <div>
         <button type="button" class="back-button" onclick="getBack()">Back</button>
     </div>
     <script src="../js/inventory.js"></script>
-    <script src="../js/_02_the_bar.js"></script>
 </body>
 </html>
