일단 마무리! 240704_minipj

--- a/HTML/inventory.html
+++ b/HTML/inventory.html
@@ -15,6 +15,10 @@
             font-style: normal;
         }
          /* 기본적인 레이아웃과 스타일 설정 */
+         /* * {
+            cursor: url('../image/마우스커서.png') 1 1,
+                     auto; /* 커서를 이미지로 변경 */
+        
         body {
             background-color: black;
             display: flex;
@@ -23,6 +27,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            
         }
         .inventory {
             position: relative;
@@ -69,7 +74,20 @@
             height: 120px;
             background-color: rgba(255, 255, 255, 0.5); /* 박스를 구분하기 위한 반투명 배경 */
         }
-        #recipe-modal {
+        /* #recipe-modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            z-index: 1000;
+        } */
+
+        /* 모달창 뒷 배경(?) */
+        .modal {
             display: none;
             position: fixed;
             top: 50%;
@@ -119,10 +137,41 @@
         <img class="modal-content" id="modal-img">
     </div>
 
+    <!-- heart Modal -->
+    <div id="heart-modal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="heart-img">
+    </div>
+
+    <!-- photo Modal -->
+    <div id="photo-modal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="photo-img">
+    </div>
+
+    <!-- Rose Modal -->
+    <div id="rose-modal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="rose-img">
+    </div>
+
+    <!-- watch Modal -->
+    <div id="watch-modal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="watch-img">
+    </div>
+
+    <!-- ring Modal -->
+    <div id="ring-modal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="ring-img">
+    </div>
+
     <!-- 인벤토리에서 돌아가는 버튼 -->
     <div>
         <button type="button" class="back-button" onclick="getBack()">Back</button>
     </div>
     <script src="../js/inventory.js"></script>
+    <!-- <script src="../js/_02_the_bar.js"></script> <<== 검토 후 삭제 결정 -->
 </body>
 </html>
