--- a/HTML/04_stage.html
+++ b/HTML/04_stage.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag Events Example</title>
+    <title>Stage</title>
     <link rel="stylesheet" href="../css/01_the_hostel.css">
     <link rel="icon" href="../image/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <style>
         /* 아이템 존을 중앙 위쪽에 배치하는 컨테이너 */
         .itemzone-container {
@@ -16,6 +18,7 @@
             display: flex;
             justify-content: center;
             opacity: 100%;
+            border: transparent;
             padding: 20px;  /* 패딩 20px */
             box-sizing: border-box;  /* 패딩 포함한 너비 계산 */
         }
@@ -31,7 +34,8 @@
             transform: none !important;
             top: 0 !important;
             left: 0 !important;
-            border: 1px solid black;
+            /* border: 1px solid black; */
+            border: transparent;
         }
 
         /* 드롭 가능한 영역을 화면 중앙에 배치하는 컨테이너 */
@@ -82,15 +86,15 @@
   <div id="overlay-top"></div>
     <div id="game-container">
         <img id="stage-image" src="../image/images/stage/무대배경.JPG" alt="Stage" style="width: 100%; height: 100%;">
-        <button id="left-button" class="nav-button" onclick="location.href='03_right_wall.html'">&lt;</button>
-        <button id="right-button" class="nav-button" onclick="location.href='05_left_wall.html'">&gt;</button>
+        <button id="left-button" class="nav-button" onclick="location.href='03_right_wall.html'" style="top: 51.30%;">　</button>
+        <button id="right-button" class="nav-button" onclick="location.href='05_left_wall.html'" style="top: 51.30%;">　</button>
 
         <div class="itemzone-container" id="item-zone">
             <!-- 드래그 가능한 아이템들 -->
-            <div id="draggable1" class="draggable" draggable="true" data-id="1">Item 1</div>
-            <div id="draggable2" class="draggable" draggable="true" data-id="2">Item 2</div>
-            <div id="draggable3" class="draggable" draggable="true" data-id="3">Item 3</div>
-            <div id="draggable4" class="draggable" draggable="true" data-id="4">Item 4</div>
+            <div id="draggable1" class="draggable" draggable="true" data-id="1">　</div>
+            <div id="draggable2" class="draggable" draggable="true" data-id="2">　</div>
+            <div id="draggable3" class="draggable" draggable="true" data-id="3">　</div>
+            <div id="draggable4" class="draggable" draggable="true" data-id="4">　</div>
         </div>
 
         <div class="dropzone-container" id="dropzone-container">
@@ -110,110 +114,7 @@
     <!-- 편지봉투 이미지 -->
     <img id="envelope-image" src="../image/images/stage/열리편지봉투.PNG" alt="Envelope" />
 
-    <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const draggables = document.querySelectorAll('.draggable');
-            const dropzones = document.querySelectorAll('.dropzone');
-            const itemZone = document.getElementById('item-zone');
-            const stageImage = document.getElementById('stage-image');
-            const envelopeImage = document.getElementById('envelope-image');
-            let droppedItems = 0;
-
-            draggables.forEach(draggable => {
-                draggable.addEventListener('dragstart', (event) => {
-                    event.dataTransfer.setData('text/plain', event.target.dataset.id);
-                    event.dataTransfer.effectAllowed = 'move';  // 드래그 효과 설정
-                });
-            });
-
-            dropzones.forEach(dropzone => {
-                dropzone.addEventListener('dragover', (event) => {
-                    event.preventDefault();  // 기본 동작 방지
-                    event.dataTransfer.dropEffect = 'move';  // 드롭 효과 설정
-                });
-
-                dropzone.addEventListener('drop', (event) => {
-                    event.preventDefault();  // 기본 동작 방지
-                    const draggedId = event.dataTransfer.getData('text/plain');
-                    const dropzoneId = event.target.dataset.id;
-
-                    if (draggedId === dropzoneId) {
-                        const draggedElement = document.querySelector(`[data-id='${draggedId}']`);
-                        dropzone.appendChild(draggedElement);
-                        draggedElement.style.position = 'absolute';
-                        draggedElement.style.top = '50%';
-                        draggedElement.style.left = '50%';
-                        draggedElement.style.transform = 'translate(-50%, -50%)';
-                        droppedItems++;
-                        checkAllItemsDropped();
-                    } else {
-                        alert('여기가 아닌 것 같다...');
-                    }
-                });
-            });
-
-            itemZone.addEventListener('dragover', (event) => {
-                event.preventDefault();
-                event.dataTransfer.dropEffect = 'move';
-            });
-
-            itemZone.addEventListener('drop', (event) => {
-                event.preventDefault();
-                const draggedId = event.dataTransfer.getData('text/plain');
-                const draggedElement = document.querySelector(`[data-id='${draggedId}']`);
-                itemZone.appendChild(draggedElement);
-                draggedElement.style.position = 'relative';
-                draggedElement.style.top = 'auto';
-                draggedElement.style.left = 'auto';
-                draggedElement.style.transform = 'none';
-            });
-
-            const inventory = JSON.parse(localStorage.getItem("inventory"));
-            let idx = 1;
-
-            inventory.forEach((ele) => {
-                if(ele.includes("심장") || ele.includes("반지") || ele.includes("깨진액자") || ele.includes("쟁미")) {
-                    document.querySelector(`#draggable${idx}`).textContent = '';
-                    document.querySelector(`#draggable${idx}`).style.background = `url(${ele})`;
-                    document.querySelector(`#draggable${idx}`).style.backgroundColor = `white`;
-                    document.querySelector(`#draggable${idx}`).style.backgroundSize = 'contain';
-                    document.querySelector(`#draggable${idx}`).style.backgroundRepeat = 'no-repeat';
-                    document.querySelector(`#draggable${idx}`).style.backgroundPosition = 'center center';
-                    idx++;
-                }
-            });
-
-            function checkAllItemsDropped() {
-                if (droppedItems === 4) {
-                    // 모든 아이템이 드롭존에 올바르게 배치된 경우
-                    stageImage.classList.add('hidden'); // 무대 이미지 숨기기
-                    itemZone.classList.add('hidden'); // 아이템 존 숨기기
-                    dropzones.forEach(dropzone => dropzone.classList.add('hidden')); // 드롭존 숨기기
-                    envelopeImage.style.display = 'block'; // 편지봉투 이미지 보이기
-
-                    // 중복 방지를 위해 희귀 동전 추가 전에 인벤토리 확인
-                    let inventory = JSON.parse(localStorage.getItem('inventory')) || [];
-                    if (!inventory.includes('../image/images/useritem/동전.png')) {
-                        setTimeout(() => {
-                            alert('희귀 동전을 얻었다.');
-                            inventory.push('../image/images/useritem/동전.png');
-                            localStorage.setItem('inventory', JSON.stringify(inventory));
-                            location.href = '05_left_wall.html';
-                        }, 2000);
-                    } else {
-                        setTimeout(() => {
-                            alert('희귀 동전이 이미 인벤토리에 있습니다.');
-                            location.href = '05_left_wall.html';
-                        }, 2000);
-                    }
-                }
-            }
-        });
-
-        function goToInventory() {
-            window.location.href = "../HTML/inventory.html";
-        }
-    </script>
+    <script src="/js/04_stage.js"></script>
     <!-- <script src="inventory.js"></script> -->
 </body>
 </html>
